<resources>
    <string name="app_name">iHypnusCare</string>
    <string name="login_account_hint">请输入手机号</string>
    <string name="zxing_tip">对准条码/二维码到框内即可扫描</string>
    <string name="activity_scan_title">二维码/条形码</string>
    <string name="activity_scan_photo">相册</string>
    <string name="activity_scan_cancle">取消</string>
    <string name="activity_scan_open">开灯</string>
    <string name="activity_scan_close">关灯</string>
    <string name="toasts_scan_failed">图片解码失败</string>
    <string name="intent_data">file_data</string>
    <string name="intent_data_2">file_data_2</string>
    <string name="intent_value">value</string>
    <string name="intent_type">type</string>
    <string name="activity_scan_battery_low_msg">手机电量过低,闪光灯功能暂时关闭！</string>
    <string name="tv_title">睡眠报告</string>
    <string name="tv_new_device_tip_1">1.确保您的呼吸机接通电源,并确保呼吸机、手机、路由器三者间的距离不超过10米。</string>
    <string name="tv_new_device_tip_2">2.进入呼吸机设置菜单,选择"一键配置",进入手动配置模式,点击下一步。</string>
    <string name="btn_next">下一步</string>
    <string name="tv_add_new_device">添加设备</string>
    <string name="tv_connect_wifi_tip">先到手机WiFi设置界面连接到"Hypnus-AP"后,返回iHypnusCare App进行操作</string>
    <string name="bt_set_wifi">去设置WiFi</string>
    <string name="tv_setting_ok">设置好了</string>
    <string name="toast_err_tip">WiFi密码可为空或者长度大于8</string>
    <string name="tip_msg">温馨提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="input_pass_word_hint">请输入WiFi密码</string>
    <string name="semaphore_poor">信号很差</string>
    <string name="semaphore_better">信号较好</string>
    <string name="semaphore_standard">信号一般</string>
    <string name="semaphore_good">信号很好</string>
    <string name="semaphore_week">信号较差</string>
    <string name="connect_success">连接成功</string>
    <string name="refresh">刷新WiFi列表</string>
    <string name="wifi_permission">请打开WiFi及定位权限</string>
    <string name="wifi_permission_connect_target">请先连接目标热点</string>
    <string name="socket_err">连接失败,请重新操作</string>
    <string name="tv_person_msg">个人信息</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="use_protocol">iHypnusCare使用条款</string>
    <string name="tv_infos_tip1">为了睡眠报告更准确,请确保所填信息真实有效</string>
    <string name="tv_infos_tip2">我们会保障您的信息安全,请放心填写</string>
    <string name="tv_man">男</string>
    <string name="tv_female">女</string>
    <string name="tv_multi_language">多语言</string>
    <string name="tv_about">关于</string>
    <string name="change_pwd">修改密码</string>
    <string name="setting_language_title">语言设置</string>
    <string name="setting_language_auto">跟随系统</string>
    <string name="setting_language_english">English</string>
    <string name="setting_simplified_chinese">简体中文</string>
    <string name="setting_traditional_chinese">繁體中文</string>
    <string name="login_out">退出登录</string>
    <string name="et_old_password">请输入原密码</string>
    <string name="parameter_setting">参数设置</string>
    <string name="tv_iknow">我知道了</string>
    <string name="tv_protocol_title">iHypnusCare用户服务协议</string>
    <string name="tv_protocol">
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;iHypnusCare平台的开发运营商以及在线服务提供商均为广州和普乐科技有限公司（以下简称“和普乐”或“我们”）。此程序旨在为您提供与和普乐产品使用相关的配套服务，涉及对您的个人信息的读取、使用、分析和披露，因此在您注册和使用之前，请仔细阅读本协议以确保知晓并理解其内容。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        1.服务条款生效与更新\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        1.1本协议是您与和普乐共同缔结的契约，具有等同于书面合同的法律效力。当您下载安装本程序，同意本协议条款并完成注册后，即成为iHypnusCare的授权用户。如您不同意本协议，注册及相关服务将立即中止。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        1.2和普乐保留根据法规更新或运营需要修订或更改本协议而不事先通知的权利。在用户服务协议的最后附有更新日期，我们将在注册页面提供最新的服务协议链接。若您在协议修订后继续使用平台的相关服务时，视同您已经阅读、理解并接受了修订后的服务协议。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        2.注册信息及隐私保护\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        2.1注册iHypnusCare平台账号时，您需要提供真实、准确的个人信息，包括但不限于姓名、性别、出生日期、移动电话号码等，并且承诺所提供的信息符合法律、法规要求。当个人信息发生变化时，您应当及时更新注册信息。在合理怀疑您提供的资料不实、有误或缺少的情况下，和普乐有权询问及发出要求改正的通知，并且有权采取包括删除相关资料、封锁/注销账号、停止部分或全部服务在内的操作措施，对此引起的任何损失和后果将由您自行承担。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        2.2依据相关法律法规规定，和普乐有权对您基于移动电话、电子邮箱及其第三方应用软件的真实身份信息进行认证。对于拒绝认证的用户，和普乐保留拒绝其使用iHypnusCare平台相关服务的权利。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        2.3注册成功后您将获得iHypnusCare平台账号，该账号仅限于您本人使用，您应当对使用iHypnusCare平台相关服务的个人及活动承担责任。请您妥善保管账号及登录密码，切勿转让或借予他人。对于您保管不善而导致第三方使用账号而造成的用户损失，和普乐不承担任何责任。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        2.4和普乐充分尊重用户隐私，并对您的注册信息严格保密，不会公开或向任何第三方透露您的个人信息，除非以下情况：\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201; （1）得到您的授权或许可；\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        （2）您在自愿的情况下，通过iHypnusCare平台与他人分享个人信息与数据；\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201; （3）根据国家法律法规或相关政府主管部门的相关要求；\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201; （4）紧急情况下用于维护和普乐的合法权益。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        2.5基于iHypnusCare平台提供服务的需求，和普乐有权请求您知悉并授权和普乐收集、使用以下个人相关数据，包括但不限于：身高、体重、GPS定位数据、通讯地址等。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        2.6和普乐通过http://www.ihypnus.com/download/privacy.html提供用户相关的隐私政策。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201; 3.服务内容与使用规则\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        3.1您需自行承担使用iHypnusCare平台服务所产生的一切硬件设施、软件及网络接入服务等引起的费用。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        3.2iHypnusCare平台服务由和普乐根据实际情况提供，如无特殊说明，和普乐通过iHypnusCare平台提供的新功能和新服务均遵循本协议约定。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        3.3和普乐根据公司及平台资源配置的要求，对连续6个月未登陆并使用iHypnusCare平台服务的账号，保留回收账号或清理该账号内相关信息及数据的权利。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        3.4您在使用iHypnusCare平台服务的过程中，必须承诺遵守中华人民共和国及国际相关法律法规的规定，不得利用本平台从事违法或不正当的活动，包括：\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        （1）在iHypnusCare平台上传、制作、复制、发布、传播以下内容或信息： a)违反宪法所确定的基本原则的； b)危害国家安全，泄露国家机密，颠覆国家政权，破坏国家统一的；
        c)损害国家荣誉和利益的； d)煽动民族仇恨、民族歧视，破坏民族团结的； e)破坏国家宗教政策，宣扬邪教和封建迷信的； f)散布谣言，扰乱社会秩序，破坏社会稳定的；
        g)散播淫秽、色情、赌博、暴力、恐怖或教唆犯罪的； h)侮辱或诽谤他人，侵犯他人合法权益的； i)煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的； j)以非法民间组织名义活动的；
        k)含有虚假、有害、胁迫、侵害他人隐私，骚扰、侵害、中伤、粗俗、猥亵或其他违背道德令人反感及不适的内容； l)其他含有法律、法规、规章、条例及任何具法律效力规范所限制或禁止的内容。
        \n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;（2）您承诺不会利用iHypnusCare平台从事以下活动：
        a)未经允许进入计算机网络进行从事数据破坏、干扰服务、信息窃取等危害计算机信息网络安全的行为；
        b)故意制作、传播计算机病毒等破坏性程序或文件的。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        3.5您承诺对自己使用iHypnusCare平台服务的任何行为承担法律责任。对于因您违反本协议规定，导致任何第三方主张的索赔、要求或损失，引起的行政处罚或侵权损害赔偿、律师费等，由您自行承担。和普乐根据您的行为性质，有权采取包括删除发布信息内容、暂停或终止服务、限制使用、回收账号、追究法律责任等措施。如和普乐首先承担了因您导致的行政处罚或侵权赔偿责任后，您应给予和普乐等额的赔偿。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        4.免责声明 4.1和普乐通过iHypnusCare平台尽力提供准确、有帮助的任何信息、服务、技术和建议，但不承诺和担保其完整性、适用性、有效性、准确性、及时性和可靠性。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        4.2和普乐有权根据运营要求在任何时间、未经通知对iHypnusCare平台的任意服务内容进行暂时或永久的修改或关闭。因此造成的功能修改、服务暂停或中断，和普乐对您或第三方不承担任何责任。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        4.3和普乐需要定期或不定期检修、维护iHypnusCare平台的设备和系统，因此引起的网络服务（包括收费网络服务）在合理时间内的中断，和普乐不承担任何责任。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        4.4对于iHypnusCare平台包含或提供给您的信息、产品（包括软件和硬件）、服务、链接、广告或宣传信息，和普乐不做任何担保和承诺。若您因访问此类信息或链接而产生任何损害或损失，和普乐不承担任何责任。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        4.5对于因不可抗力如自然灾害或其他如黑客袭击、病毒感染等无法控制的原因，导致iHypnusCare平台服务系统崩溃或无法正常使用，以及服务器数据丢失等后果，和普乐不承担任何责任。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        5.知识产权与其他合法权益\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        5.1本条款构成《中华人民共和国著作权法》第二十五条及相关法律规定的著作财产权等权力转让的书面协议，适用于您在iHypnusCare平台发布的任何受著作权保护的作品内容，包括但不限于文字、图片等多种形式，且无论该内容形成于本条款订立前或是订立后。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        5.2当您同意并接受本协议，即表明您将发表、披露于iHypnusCare平台的任何信息的任何形式可转让的权利，包括但不限于著作权、复制权、发行权、出租权、展览权、翻译权、信息网络传播权等，将以上权利以全球性免版税许可的形式，全部独家、永久、不可撤销地转让给和普乐所有。和普乐有权就任何主体侵权而单独提起诉讼。若您对以上使用信息的方式存在异议，应在发现后及时联系和普乐沟通解决，若您未对和普乐的使用行为提出异议，则标明您同意此种使用行为并且放弃主张权利。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        5.3和普乐尊重您的知识产权和合法权益，若您认为和普乐侵犯了您的知识产权或合法权益，请提供以下资料：\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201; （1）对涉嫌侵权内容提供可行使知识产权或其他合法权益的权属证明；\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        （2）充分并明确描述被侵犯了知识产权或其他合法权益的情况，并提供涉嫌侵权的信息目录或网址；\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        （3）提供权利人的详细联络信息，包括：姓名、身份证件复印件或单位登记证明复印件、通讯地址、电话号码、传真以及邮箱信息；\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201; （4）个人或单位的自我符合性及真实性声明。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        请将以上信息发送至以下邮箱：ihypnuscare@ihypnus.com\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        5.4除法律有强制性规定，未经和普乐明确的书面许可，任何单位或个人以任何方式全部或部分复制、转载、引用、链接、抓取iHypnusCare平台提供的信息内容，均不得用于出售、获利或其他商业目的。若有此类行为，和普乐有权自动终止iHypnusCare服务使用授权，并要求立即销毁已经制作的所有包含iHypnusCare平台信息或服务的有关复本，同时和普乐保留追究其法律责任的权利。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        5.5对于iHypnusCare平台所发布、提供的任何资料信息，包括但不限于：文字、图标、标识、按钮图标、声音、视频、数字文件或程序下载等，和普乐拥有其所有权和版权，并且该权利受中华人民共和国和国际版权法及相关法律法规的保护。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        5.6iHypnusCare及相关图形是和普乐的注册商标，未经书面许可，任何人或单位不得擅自以非法的方式，包括但不限于复制、传播、展示、镜像、上传、下载和使用。否则，和普乐有权追究其法律责任。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        6.其他\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        6.1本协议的制定、执行、解释和争议解决适用于在中华人民共和国大陆地区限行有效法律。如本协议中的某些条款内容与适用法律相抵触时，这些条款将安全按照法律规定从新解释，与此同时其他的条款仍然有效并适用。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        6.2缔约双方就本协议内容或执行产生争议时，应尽力友好协商解决，协商无果时，任一方均有权向大陆地区具有管辖权的人民法院提起诉讼。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        6.3如本协议的中文和英文版本产生冲突时，请以中文版本为准。\n
        &#160;&#160;&#160;&#160;&#8201;&#8201;&#8201;
        6.4和普乐尊重用户的合法权利，本协议及iHypnusCare平台发布的各类规则、声明等内容，是为了更好地为用户提供服务。若您有任何意见或建议可在程序内的“意见反馈”中提出，以帮助和普乐做出改进。
    </string>
    <string name="tv_verson">当前版本:</string>
    <string name="tv_company_name">广州和普乐健康科技有限公司版权所有</string>
    <string name="add_new_device">添加设备</string>
    <string name="hint_input_device_sn">请扫一扫设备SN</string>
    <string name="bt_next">下一步</string>
    <string name="tv_modify_text">修改密码</string>
    <string name="pwd_error_tip">请输入6-14位的密码,支持数字与大小写字母</string>
    <string name="onloading">正在加载 ...</string>
    <string name="pwd_different_error">两次输入的密码不一致,请重新输入</string>
    <string name="et_new_password">请输入新密码</string>
    <string name="hint_pwd_input_again">请再次输入新密码</string>
    <string name="btn_confirm">确定</string>
    <string name="tv_change_photo">更换头像</string>
    <string name="tv_compressing">压缩中...</string>
    <string name="tv_unknow">未知</string>
    <string name="tv_online">在线</string>
    <string name="tv_offline">离线</string>
    <string name="tv_text_model">型号</string>
    <string name="tv_text_version">版本</string>
    <string name="tv_text_status">状态</string>
    <string name="tv_text_parameter_setting">参数设置</string>
    <string name="tv_text_change_wifi">更改WiFi</string>
    <string name="tv_text_feed_back">意见反馈</string>
    <string name="tv_title_pwd_back">密码找回</string>
    <string name="tv_pwd_error_length">密码长度必须大于6位</string>
    <string name="tv_pwd_error_different">两次输入的密码不一致,请重新输入</string>
    <string name="tv_text_second">&#160;秒</string>
    <string name="tv_get_vertify_code">获取验证码</string>
    <string name="tv_text_input_account">请输入手机号码</string>
    <string name="tv_input_vertify_code">请输入验证码</string>
    <string name="tv_input_new_pass_word">请输入新密码</string>
    <string name="tv_input_new_pass_word_again">请再次输入新密码</string>
    <string name="tv_help_center">帮助中心</string>
    <string name="tv_toast_exit_if_double">再按一次退出程序</string>
    <string name="rb_device">设备</string>
    <string name="rb_report">报告</string>
    <string name="rb_my_ihy">我的</string>
    <string name="tv_loading_login">正在登入...</string>
    <string name="tv_input_account">请输入账号</string>
    <string name="tv_input_pwd">请输入密码</string>
    <string name="tv_login">登录</string>
    <string name="tv_regist">立即注册？</string>
</resources>