<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/img_background"
                android:orientation="vertical">
    <!--头部标题-->
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="1px"
    >

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/main_color_blue"/>
    </com.zhy.autolayout.AutoRelativeLayout>


    <TextView
        android:id="@+id/tv_tip_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_header"
        android:layout_margin="60px"
        android:text="@string/tv_new_device_tip_1"
        android:textColor="@color/white"
        android:textSize="44px"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tip_1"
        android:layout_marginLeft="@dimen/w60"
        android:layout_marginRight="60px"
        android:text="@string/tv_new_device_tip_2"
        android:textColor="@color/white"
        android:textSize="44px"/>

    <Button
        android:id="@+id/bt_next"
        style="@style/CommentButtonStyle"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="300px"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:gravity="center"
        android:text="@string/btn_next"
        android:textSize="54px"/>


</com.zhy.autolayout.AutoRelativeLayout>