<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_background"
    android:orientation="vertical">
    <View
        style="@style/DividerLineHor"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"
        android:layout_marginTop="300px"/>
    <com.zhy.autolayout.AutoLinearLayout
        style="@style/CommentLinearLayout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="160px">
        <com.ihypnus.widget.AppTextView
            style="@style/TextAppearanceMedium"
            android:text="@string/tv_text_model"
            android:textColor="@color/white"/>
        <View android:layout_width="2px"
              android:layout_height="match_parent"
              android:layout_margin="20px"
              android:background="@color/def_line_color"/>
        <TextView
            android:id="@+id/tv_model_type"
            style="@style/TextAppearanceMedium"
            android:textColor="@color/white"
            android:visibility="invisible"/>
    </com.zhy.autolayout.AutoLinearLayout>

    <View
        style="@style/DividerLineHor"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"/>

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/CommentLinearLayout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="160px">
        <com.ihypnus.widget.AppTextView
            style="@style/TextAppearanceMedium"
            android:text="@string/tv_text_version"
            android:textColor="@color/white"/>
        <View android:layout_width="2px"
              android:layout_height="match_parent"
              android:layout_margin="20px"
              android:background="@color/def_line_color"/>
        <TextView
            android:id="@+id/tv_version"
            style="@style/TextAppearanceMedium"
            android:textColor="@color/white"
            android:visibility="invisible"/>
    </com.zhy.autolayout.AutoLinearLayout>

    <View
        style="@style/DividerLineHor"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"/>
    <com.zhy.autolayout.AutoLinearLayout
        style="@style/CommentLinearLayout"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="160px">
        <TextView
            style="@style/TextAppearanceMedium"
            android:text="@string/tv_text_status"
            android:textColor="@color/white"/>
        <View android:layout_width="2px"
              android:layout_height="match_parent"
              android:layout_margin="20px"
              android:background="@color/def_line_color"/>
        <TextView
            android:id="@+id/tv_status"
            style="@style/TextAppearanceMedium"
            android:textColor="@color/white"
            android:visibility="invisible"/>
        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="56px"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:src="@mipmap/icon_online"
            android:visibility="invisible"/>
    </com.zhy.autolayout.AutoLinearLayout>
    <View
        style="@style/DividerLineHor"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"/>

    <Button
        android:id="@+id/btn_setting"
        style="@style/CommentButtonStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="90px"
        android:layout_marginRight="90px"
        android:layout_marginTop="300px"
        android:gravity="center"
        android:text="@string/tv_text_parameter_setting"
        android:textSize="54px"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_modify"
        style="@style/CommentButtonStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="90px"
        android:layout_marginRight="90px"
        android:layout_marginTop="80px"
        android:gravity="center"
        android:text="@string/tv_text_change_wifi"
        android:textSize="54px"
        android:visibility="invisible"/>
</com.zhy.autolayout.AutoLinearLayout>