<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_background"
    android:orientation="vertical">
    <View
        style="@style/CommentDividingLineNoPadding"/>
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_multi_language"
        style="@style/CommentRelativeLayout">
        <com.ihypnus.widget.AppTextView
            android:id="@+id/tv_multi_language"
            style="@style/TextAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/tv_multi_language"/>
        <ImageView
            android:id="@+id/iv_multi_language"
            android:layout_width="56px"
            android:layout_height="56px"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_right_arrow"/>
        <View
            style="@style/CommentDividingLineNoPadding"
            android:layout_alignParentBottom="true"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_about"
        style="@style/CommentRelativeLayout">
        <com.ihypnus.widget.AppTextView
            android:id="@+id/tv_about"
            style="@style/TextAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/tv_about"/>
        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="56px"
            android:layout_height="56px"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_right_arrow"/>
        <View
            style="@style/CommentDividingLineNoPadding"
            android:layout_alignParentBottom="true"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_change_pwd"
        style="@style/CommentRelativeLayout">
        <com.ihypnus.widget.AppTextView
            android:id="@+id/tv_change_pwd"
            style="@style/TextAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/change_pwd"/>
        <ImageView
            android:id="@+id/iv_change_pwd"
            android:layout_width="56px"
            android:layout_height="56px"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_right_arrow"/>
        <View
            style="@style/CommentDividingLineNoPadding"
            android:layout_alignParentBottom="true"/>
    </com.zhy.autolayout.AutoRelativeLayout>
    <com.ihypnus.widget.AppButton
        android:id="@+id/btn_login_out"
        style="@style/CommentButtonStyle"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="90px"
        android:layout_marginRight="90px"
        android:layout_marginTop="700px"
        android:gravity="center"
        android:text="@string/login_out"
        android:textSize="54px"/>
</com.zhy.autolayout.AutoLinearLayout>