<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ihypnus.ihypnuscare.activity.HomeActivity">


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h2"
        android:background="@color/main_color_blue"/>

    <RadioGroup
        android:id="@+id/rgp_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h165"
        android:layout_gravity="bottom"
        android:background="#2A3354"
        android:orientation="horizontal">

        <com.ihypnus.widget.AppRadioButton
            android:id="@+id/rb_device"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/navigation_device"
            android:gravity="center"
            android:paddingTop="@dimen/w30"
            android:text="@string/rb_device"
            android:textColor="@color/white"
            android:textSize="@dimen/w44"/>

        <com.ihypnus.widget.AppRadioButton
            android:id="@+id/rb_report"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/navigation_report"
            android:gravity="center"
            android:paddingTop="@dimen/w30"
            android:text="@string/rb_report"
            android:textColor="@color/white"/>


        <com.ihypnus.widget.AppRadioButton
            android:id="@+id/rb_my_ihy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/navigation_ihy"
            android:gravity="center"
            android:paddingTop="@dimen/w30"
            android:text="@string/rb_my_ihy"
            android:textColor="@color/white"/>
    </RadioGroup>


</LinearLayout>
