<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img_background"
    android:orientation="vertical">

    <View
        style="@style/CommentDividingLineWihtPadding"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"
        android:layout_marginTop="300px"/>

    <!--密码-->
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/old_pwd_layout"
        style="@style/CommentLinearLayout"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="30px"
            android:layout_marginTop="30px"
            android:background="@color/text_hint"/>


        <com.ihypnus.widget.AppEditText
            android:id="@+id/et_old_password"
            style="@style/TextAppearanceMedium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/et_old_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"/>

        <CheckBox
            android:id="@+id/cb_old_pw1"
            android:layout_width="76px"
            android:layout_height="76px"
            android:background="@drawable/password_visible"
            android:button="@null"
            android:checked="false"/>

    </com.zhy.autolayout.AutoLinearLayout>


    <View
        style="@style/CommentDividingLineWihtPadding"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"/>

    <!--密码-->
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/new_code_layout"
        style="@style/CommentLinearLayout"
        android:gravity="center"
        android:orientation="horizontal">

        <View android:layout_width="1px"
              android:layout_height="match_parent"
              android:layout_marginBottom="30px"
              android:layout_marginTop="30px"
              android:background="@color/text_hint"/>


        <com.ihypnus.widget.AppEditText
            android:id="@+id/new_password"
            style="@style/TextAppearanceMedium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/et_new_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"/>

        <CheckBox
            android:id="@+id/cb_pw1"
            android:layout_width="76px"
            android:layout_height="76px"
            android:background="@drawable/password_visible"
            android:button="@null"
            android:checked="false"/>

    </com.zhy.autolayout.AutoLinearLayout>


    <View
        style="@style/CommentDividingLineWihtPadding"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"/>

    <!--密码-->
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/check_code_layout"
        style="@style/CommentLinearLayout"
        android:layout_below="@id/layout_user"
        android:gravity="center"
        android:orientation="horizontal">

        <View android:layout_width="1px"
              android:layout_height="match_parent"
              android:layout_marginBottom="30px"
              android:layout_marginTop="30px"
              android:background="@color/text_hint"/>


        <com.ihypnus.widget.AppEditText
            android:id="@+id/et_pw2"
            style="@style/TextAppearanceMedium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_pwd_input_again"
            android:inputType="textPassword"
            android:maxLength="20"
            android:singleLine="true"/>

        <CheckBox
            android:id="@+id/cb_pw2"
            android:layout_width="76px"
            android:layout_height="76px"
            android:background="@drawable/password_visible"
            android:button="@null"
            android:checked="false"/>

    </com.zhy.autolayout.AutoLinearLayout>


    <View
        style="@style/CommentDividingLineWihtPadding"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"/>

    <com.ihypnus.widget.AppButton
        android:id="@+id/btn_confirm"
        style="@style/CommentButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginLeft="86px"
        android:layout_marginRight="86px"
        android:layout_marginTop="500px"
        android:gravity="center"
        android:text="@string/btn_confirm"
        android:textSize="54px"/>

</com.zhy.autolayout.AutoLinearLayout>